--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <img src="image/1596334215064.jpeg" alt="Yingjian Wang's Image">
+  <img src="Image/1596334215064.jpeg" alt="Yingjian Wang's Image">
   <h1>Yingjian Wang</h1>
   <p><em>Full Stack Developer</em></p>
   <p>I am a full stack developer</p>
